fix the navbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -188,3 +188,7 @@ body {
 a, button {
   outline: none;
 }
+
+section {
+  scroll-margin-top: 5rem;
+}
